Add Jeballtofile capability and CommandExec
